--- a/www/src/lib/components/code/code-theme.styles.css
+++ b/www/src/lib/components/code/code-theme.styles.css
@@ -1,177 +1,177 @@
 @media (prefers-color-scheme: dark) {
-  :root:not([theme=light]) {
-    --code-atrule: #F9EE98;
-    --code-attr-name: #A8FF60;
-    --code-attr-value: #F9EE98;
-    --code-attribute: #F9EE98;
-    --code-background: var(--surface-2);
-    --code-boolean: #99CC99;
-    --code-builtin: #A8FF60;
-    --code-cdata: #7C7C7C;
-    --code-class: #FFFFB6;
-    --code-char: #A8FF60;
-    --code-class-name: #E9C062;
-    --code-color: #c5c8c6;
-    --code-comment: #7C7C7C;
-    --code-constant: #99CC99;
-    --code-deleted: #FFFFB6;
-    --code-doctype: #7C7C7C;
-    --code-entity: #FFFFB6;
-    --code-function: #DAD085;
-    --code-hexcode: #FF73FD;
-    --code-id: #fd971f;
-    --code-important: #fd971f;
-    --code-inserted: #A8FF60;
-    --code-keyword: #96CBFE;
-    --code-number: #FF73FD;
-    --code-operator: #EDEDED;
-    --code-prolog: #7C7C7C;
-    --code-property: #96CBFE;
-    --code-pseudo-class: #A8FF60;
-    --code-pseudo-element: #A8FF60;
-    --code-punctuation: #c5c8c6;
-    --code-regex: #E9C062;
-    --code-selection-bg: #cceae7;
-    --code-selection-color: #263238;
-    --code-selector: #A8FF60;
-    --code-string: #A8FF60;
-    --code-symbol: #f92672;
-    --code-tag: #96CBFE;
-    --code-unit: #FF73FD;
-    --code-url: #96CBFE;
-    --code-variable: #C6C5FE;
-  }
+	:root:not([theme='light']) {
+		--code-atrule: #f9ee98;
+		--code-attr-name: #a8ff60;
+		--code-attr-value: #f9ee98;
+		--code-attribute: #f9ee98;
+		--code-background: var(--surface-2);
+		--code-boolean: #99cc99;
+		--code-builtin: #a8ff60;
+		--code-cdata: #7c7c7c;
+		--code-class: #ffffb6;
+		--code-char: #a8ff60;
+		--code-class-name: #e9c062;
+		--code-color: #c5c8c6;
+		--code-comment: #7c7c7c;
+		--code-constant: #99cc99;
+		--code-deleted: #ffffb6;
+		--code-doctype: #7c7c7c;
+		--code-entity: #ffffb6;
+		--code-function: #dad085;
+		--code-hexcode: #ff73fd;
+		--code-id: #fd971f;
+		--code-important: #fd971f;
+		--code-inserted: #a8ff60;
+		--code-keyword: #96cbfe;
+		--code-number: #ff73fd;
+		--code-operator: #ededed;
+		--code-prolog: #7c7c7c;
+		--code-property: #96cbfe;
+		--code-pseudo-class: #a8ff60;
+		--code-pseudo-element: #a8ff60;
+		--code-punctuation: #c5c8c6;
+		--code-regex: #e9c062;
+		--code-selection-bg: #cceae7;
+		--code-selection-color: #263238;
+		--code-selector: #a8ff60;
+		--code-string: #a8ff60;
+		--code-symbol: #f92672;
+		--code-tag: #96cbfe;
+		--code-unit: #ff73fd;
+		--code-url: #96cbfe;
+		--code-variable: #c6c5fe;
+	}
 }
 
-[theme=dark],
-:root[theme=dark] {
-  --code-atrule: #F9EE98;
-  --code-attr-name: #A8FF60;
-  --code-attr-value: #F9EE98;
-  --code-attribute: #F9EE98;
-  --code-background: var(--surface-2);
-  --code-boolean: #99CC99;
-  --code-builtin: #A8FF60;
-  --code-cdata: #7C7C7C;
-  --code-class: #FFFFB6;
-  --code-char: #A8FF60;
-  --code-class-name: #E9C062;
-  --code-color: #c5c8c6;
-  --code-comment: #7C7C7C;
-  --code-constant: #99CC99;
-  --code-deleted: #FFFFB6;
-  --code-doctype: #7C7C7C;
-  --code-entity: #FFFFB6;
-  --code-function: #DAD085;
-  --code-hexcode: #FF73FD;
-  --code-id: #fd971f;
-  --code-important: #fd971f;
-  --code-inserted: #A8FF60;
-  --code-keyword: #96CBFE;
-  --code-number: #FF73FD;
-  --code-operator: #EDEDED;
-  --code-prolog: #7C7C7C;
-  --code-property: #96CBFE;
-  --code-pseudo-class: #A8FF60;
-  --code-pseudo-element: #A8FF60;
-  --code-punctuation: #c5c8c6;
-  --code-regex: #E9C062;
-  --code-selection-bg: #cceae7;
-  --code-selection-color: #263238;
-  --code-selector: #A8FF60;
-  --code-string: #A8FF60;
-  --code-symbol: #f92672;
-  --code-tag: #96CBFE;
-  --code-unit: #FF73FD;
-  --code-url: #96CBFE;
-  --code-variable: #C6C5FE;
+[theme='dark'],
+:root[theme='dark'] {
+	--code-atrule: #f9ee98;
+	--code-attr-name: #a8ff60;
+	--code-attr-value: #f9ee98;
+	--code-attribute: #f9ee98;
+	--code-background: var(--surface-2);
+	--code-boolean: #99cc99;
+	--code-builtin: #a8ff60;
+	--code-cdata: #7c7c7c;
+	--code-class: #ffffb6;
+	--code-char: #a8ff60;
+	--code-class-name: #e9c062;
+	--code-color: #c5c8c6;
+	--code-comment: #7c7c7c;
+	--code-constant: #99cc99;
+	--code-deleted: #ffffb6;
+	--code-doctype: #7c7c7c;
+	--code-entity: #ffffb6;
+	--code-function: #dad085;
+	--code-hexcode: #ff73fd;
+	--code-id: #fd971f;
+	--code-important: #fd971f;
+	--code-inserted: #a8ff60;
+	--code-keyword: #96cbfe;
+	--code-number: #ff73fd;
+	--code-operator: #ededed;
+	--code-prolog: #7c7c7c;
+	--code-property: #96cbfe;
+	--code-pseudo-class: #a8ff60;
+	--code-pseudo-element: #a8ff60;
+	--code-punctuation: #c5c8c6;
+	--code-regex: #e9c062;
+	--code-selection-bg: #cceae7;
+	--code-selection-color: #263238;
+	--code-selector: #a8ff60;
+	--code-string: #a8ff60;
+	--code-symbol: #f92672;
+	--code-tag: #96cbfe;
+	--code-unit: #ff73fd;
+	--code-url: #96cbfe;
+	--code-variable: #c6c5fe;
 }
 
 @media (prefers-color-scheme: light) {
-  :root:not([theme=dark]) {
-    --code-atrule: #7c4dff;
-    --code-attr-name: #39adb5;
-    --code-attr-value: #f6a434;
-    --code-attribute: #f6a434;
-    --code-background: #fafafa;
-    --code-boolean: #7c4dff;
-    --code-builtin: #39adb5;
-    --code-cdata: #39adb5;
-    --code-char: #39adb5;
-    --code-class: #39adb5;
-    --code-class-name: #6182b8;
-    --code-color: #90a4ae;
-    --code-comment: #aabfc9;
-    --code-constant: #7c4dff;
-    --code-deleted: #e53935;
-    --code-doctype: #aabfc9;
-    --code-entity: #e53935;
-    --code-function: #7c4dff;
-    --code-hexcode: #f76d47;
-    --code-id: #7c4dff;
-    --code-important: #7c4dff;
-    --code-inserted: #39adb5;
-    --code-keyword: #7c4dff;
-    --code-number: #f76d47;
-    --code-operator: #39adb5;
-    --code-prolog: #aabfc9;
-    --code-property: #39adb5;
-    --code-pseudo-class: #f6a434;
-    --code-pseudo-element: #f6a434;
-    --code-punctuation: #39adb5;
-    --code-regex: #6182b8;
-    --code-selection-bg: #cceae7;
-    --code-selection-color: #263238;
-    --code-selector: #e53935;
-    --code-string: #f6a434;
-    --code-symbol: #7c4dff;
-    --code-tag: #e53935;
-    --code-unit: #f76d47;
-    --code-url: #e53935;
-    --code-variable: #e53935;
-  }
+	:root:not([theme='dark']) {
+		--code-atrule: #7c4dff;
+		--code-attr-name: #39adb5;
+		--code-attr-value: #f6a434;
+		--code-attribute: #f6a434;
+		--code-background: #fafafa;
+		--code-boolean: #7c4dff;
+		--code-builtin: #39adb5;
+		--code-cdata: #39adb5;
+		--code-char: #39adb5;
+		--code-class: #39adb5;
+		--code-class-name: #6182b8;
+		--code-color: #90a4ae;
+		--code-comment: #aabfc9;
+		--code-constant: #7c4dff;
+		--code-deleted: #e53935;
+		--code-doctype: #aabfc9;
+		--code-entity: #e53935;
+		--code-function: #7c4dff;
+		--code-hexcode: #f76d47;
+		--code-id: #7c4dff;
+		--code-important: #7c4dff;
+		--code-inserted: #39adb5;
+		--code-keyword: #7c4dff;
+		--code-number: #f76d47;
+		--code-operator: #39adb5;
+		--code-prolog: #aabfc9;
+		--code-property: #39adb5;
+		--code-pseudo-class: #f6a434;
+		--code-pseudo-element: #f6a434;
+		--code-punctuation: #39adb5;
+		--code-regex: #6182b8;
+		--code-selection-bg: #cceae7;
+		--code-selection-color: #263238;
+		--code-selector: #e53935;
+		--code-string: #f6a434;
+		--code-symbol: #7c4dff;
+		--code-tag: #e53935;
+		--code-unit: #f76d47;
+		--code-url: #e53935;
+		--code-variable: #e53935;
+	}
 }
 
-[theme=light],
-:root[theme=light] {
-  --code-atrule: #7c4dff;
-  --code-attr-name: #39adb5;
-  --code-attr-value: #f6a434;
-  --code-attribute: #f6a434;
-  --code-background: var(--surface-2) /* #fafafa */;
-  --code-boolean: #7c4dff;
-  --code-builtin: #39adb5;
-  --code-cdata: #39adb5;
-  --code-char: #39adb5;
-  --code-class: #39adb5;
-  --code-class-name: #6182b8;
-  --code-color: #90a4ae;
-  --code-comment: #aabfc9;
-  --code-constant: #7c4dff;
-  --code-deleted: #e53935;
-  --code-doctype: #aabfc9;
-  --code-entity: #e53935;
-  --code-function: #7c4dff;
-  --code-hexcode: #f76d47;
-  --code-id: #7c4dff;
-  --code-important: #7c4dff;
-  --code-inserted: #39adb5;
-  --code-keyword: #7c4dff;
-  --code-number: #f76d47;
-  --code-operator: #39adb5;
-  --code-prolog: #aabfc9;
-  --code-property: #39adb5;
-  --code-pseudo-class: #f6a434;
-  --code-pseudo-element: #f6a434;
-  --code-punctuation: #39adb5;
-  --code-regex: #6182b8;
-  --code-selection-bg: #cceae7;
-  --code-selection-color: #263238;
-  --code-selector: #e53935;
-  --code-string: #f6a434;
-  --code-symbol: #7c4dff;
-  --code-tag: #e53935;
-  --code-unit: #f76d47;
-  --code-url: #e53935;
-  --code-variable: #e53935;
+[theme='light'],
+:root[theme='light'] {
+	--code-atrule: #7c4dff;
+	--code-attr-name: #39adb5;
+	--code-attr-value: #f6a434;
+	--code-attribute: #f6a434;
+	--code-background: var(--surface-2) /* #fafafa */;
+	--code-boolean: #7c4dff;
+	--code-builtin: #39adb5;
+	--code-cdata: #39adb5;
+	--code-char: #39adb5;
+	--code-class: #39adb5;
+	--code-class-name: #6182b8;
+	--code-color: #90a4ae;
+	--code-comment: #aabfc9;
+	--code-constant: #7c4dff;
+	--code-deleted: #e53935;
+	--code-doctype: #aabfc9;
+	--code-entity: #e53935;
+	--code-function: #7c4dff;
+	--code-hexcode: #f76d47;
+	--code-id: #7c4dff;
+	--code-important: #7c4dff;
+	--code-inserted: #39adb5;
+	--code-keyword: #7c4dff;
+	--code-number: #f76d47;
+	--code-operator: #39adb5;
+	--code-prolog: #aabfc9;
+	--code-property: #39adb5;
+	--code-pseudo-class: #f6a434;
+	--code-pseudo-element: #f6a434;
+	--code-punctuation: #39adb5;
+	--code-regex: #6182b8;
+	--code-selection-bg: #cceae7;
+	--code-selection-color: #263238;
+	--code-selector: #e53935;
+	--code-string: #f6a434;
+	--code-symbol: #7c4dff;
+	--code-tag: #e53935;
+	--code-unit: #f76d47;
+	--code-url: #e53935;
+	--code-variable: #e53935;
 }
