--- a/www/src/lib/components/link/link.module.css
+++ b/www/src/lib/components/link/link.module.css
@@ -22,12 +22,12 @@
 	background-color: var(--color-link-active-bg);
 }
 
-.link[aria-disabled="true"] {
+.link[aria-disabled='true'] {
 	cursor: not-allowed;
 	opacity: 0.7;
 	text-decoration: line-through;
 }
 
-.link[aria-disabled="true"]:active {
+.link[aria-disabled='true']:active {
 	pointer-events: none;
 }
