--- a/www/src/styles/globals.css
+++ b/www/src/styles/globals.css
@@ -1,13 +1,13 @@
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 :root {
-  color-scheme: light dark;
+	color-scheme: light dark;
 }
 
 body {
@@ -16,40 +16,41 @@ body {
 	min-height: 100vh;
 	line-height: 1.4;
 	transition: background-color 0.2s linear;
-  background-color: var(--surface-1);
-  color: var(--text-1);
-  font-family: var(--font-main);
+	background-color: var(--surface-1);
+	color: var(--text-1);
+	font-family: var(--font-main);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-ul, ol {
-  list-style: none;
+ul,
+ol {
+	list-style: none;
 }
 
 button {
-  background: none;
-  outline: none;
-  border: none;
+	background: none;
+	outline: none;
+	border: none;
 }
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+	bottom: -0.25em;
 }
 
 sup {
-  top: -0.5em;
+	top: -0.5em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
