fix: typo within a classname

--- a/packages/svelte/src/components/Arrow/arrow.module.css
+++ b/packages/svelte/src/components/Arrow/arrow.module.css
@@ -51,7 +51,7 @@
 	transform: rotate(180deg);
 }
 
-.slidy-arrow.prev.vertical slidy-arrow-icon {
+.slidy-arrow.prev.vertical .slidy-arrow-icon {
 	transform: rotate(90deg);
 }
 
