fix: correct classname for arrow orientation

--- a/packages/svelte/src/components/Arrow/arrow.module.css
+++ b/packages/svelte/src/components/Arrow/arrow.module.css
@@ -55,7 +55,7 @@
 	transform: rotate(90deg);
 }
 
-.slidy-arrow.vertical:not(.prev) slidy-arrow-icon {
+.slidy-arrow.vertical:not(.prev) .slidy-arrow-icon {
 	transform: rotate(90deg);
 }
 
