--- a/www/src/styles/utility.css
+++ b/www/src/styles/utility.css
@@ -2,3 +2,10 @@
 	width: min(100% - 2 * var(--size-2), 1080px);
 	margin: 0 auto;
 }
+
+.grid-flexible {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(var(--item-size, 350px), 1fr));
+	grid-auto-rows: min-content;
+	gap: var(--space-m);
+}
