--- a/www/src/styles/typography.css
+++ b/www/src/styles/typography.css
@@ -1,19 +1,9 @@
-/* variation fonts */
-@font-face {
-	font-family: 'Montserrat-VF';
-	src: url('/fonts/Montserrat-VF.woff2') format('woff2-variations');
-}
-
-/* fallbacks, regular */
-@font-face {
-	font-family: 'Montserrat-Medium-Regular';
-	src: url('/fonts/Montserrat-Medium-Regular.woff2') format('woff2');
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @supports (font-variation-settings: normal) {
 	:root {
-		--font-main: 'Montserrat-VF', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-			Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-			'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+		--font-main: 'Nunito', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+			'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+			'Segoe UI Symbol', 'Noto Color Emoji';
 	}
 }
