--- a/assets/styles/slidy.module.css
+++ b/assets/styles/slidy.module.css
@@ -113,18 +113,19 @@
 
 .slidy[aria-orientation="vertical"] {
     display: grid;
-    grid-template: auto minmax(0, 1fr) auto auto / minmax(0, 1fr) auto auto;
+    grid-template: auto minmax(0, 1fr) repeat(3, auto) / minmax(0, 1fr) auto;
     grid-template-areas:
-        'prev-slide progress dots'
-        'slides progress dots'
-        'next-slide progress dots'
-        'thumbnail thumbnail thumbnail';
+        'prev-slide dots'
+        'slides dots'
+        'next-slide dots'
+        'progress progress'
+        'thumbnail thumbnail';
     height: var(--slidy-height, 100%);
     width: var(--slidy-width, 100%);
 }
 
 .slidy[aria-orientation="vertical"] > .slidy-slides {
-    grid-row: 1 / -2;
+    grid-row: 1 / -3;
     grid-column: 1;
 
     flex-flow: column nowrap;
