--- a/packages/svelte/src/components/Slidy/slidy.module.css
+++ b/packages/svelte/src/components/Slidy/slidy.module.css
@@ -95,19 +95,20 @@
 
 /* mode::vertical */
 
-.slidy.vertical {
+.slidy[aria-orientation="vertical"] {
 	display: grid;
-	grid-template: auto minmax(0, 1fr) auto auto / minmax(0, 1fr) auto auto;
+	grid-template: auto minmax(0, 1fr) auto auto auto / minmax(0, 1fr) auto;
 	grid-template-areas:
-		"prev-slide progress dots"
-		"slides progress dots"
-		"next-slide progress dots"
-		"thumbnail thumbnail thumbnail";
+		"prev-slide dots"
+		"slides dots"
+		"next-slide dots"
+		"progress progress"
+		"thumbnail thumbnail";
 	height: var(--slidy-height, 100%);
 	width: var(--slidy-width, 100%);
 }
 
-.slidy.vertical  > .slidy-slides {
+.slidy[aria-orientation="vertical"]  > .slidy-slides {
 	grid-row: 1 / -2;
 	grid-column: 1;
 
@@ -116,7 +117,7 @@
 	height: var(--slidy-slide-height, auto);
 }
 
-.slidy.vertical > .slidy-nav {
+.slidy[aria-orientation="vertical"] > .slidy-nav {
 	width: auto;
 	height: max-content;
 }
